--- a/modd.conf
+++ b/modd.conf
@@ -1,7 +1,9 @@
+# Test
 **/*.go {
     prep: go test @dirmods
 }
 
+# Build
 **/*.go !**/*_test.go {
-    prep: go install ./...
+    prep: go build -o bin/envy-go
 }
